// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component testing Input 1`] = `
<DocumentFragment>
  <input
    class="sc-bczRLJ cGfFeQ"
  />
</DocumentFragment>
`;

exports[`Input component testing Input disabled 1`] = `
<DocumentFragment>
  <input
    class="sc-bczRLJ cGfFeQ"
    disabled=""
  />
</DocumentFragment>
`;

exports[`Input component testing Input error 1`] = `
<DocumentFragment>
  <input
    class="sc-bczRLJ hsaiFp"
  />
</DocumentFragment>
`;

exports[`Input component testing Input multiline 1`] = `
<DocumentFragment>
  <textarea
    class="sc-bczRLJ cGfFeQ"
  />
</DocumentFragment>
`;
